--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Document Upload</title>
+  <title>Documents Upload</title>
 </head>
 <body>
   <h1>Upload a Document</h1>
